--- a/busan2/busan2/busan2.vcxproj
+++ b/busan2/busan2/busan2.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="부산헹(2).c" />
+    <ClCompile Include="부산헹(3).c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
