--- a/busan2/busan2/busan2.vcxproj.filters
+++ b/busan2/busan2/busan2.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="부산헹(2).c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="부산헹(3).c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
